ناور بار چسبنده اضافه شد
18 فروردین 99

--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
 <!---------------------------------------Start Header---------------------------------------->
 
 <div class="container-fluid">
+    <section class="row sticky-nav position-fixed w-100">
+
+        <div class="navbar-fix col-12  ">
+
+            <div class="col-5 offset-7 navbar-item-holder">
+                <ul class="d-flex list-unstyled">
+                    <li><a href="#">درباره ما</a>  <span class="text-white"> | </span></li>
+                    <li><a href="#">دسته بندی محصولات</a> <span class="text-white"> | </span></li>
+                    <li><a href="#">محصولات</a> <span class="text-white"> | </span></li>
+                    <li><a href="#">تماس با ما</a> <span class="text-white"> | </span></li>
+                </ul>
+            </div>
+        </div>
+        <div class="logo-holder sticky-logo position-absolute">
+            <figure>
+                <img src="css/img/logo.png" alt="logo" >
+            </figure>
+        </div>
+    </section>
     <header class="row header-container">
         <!--Start Top Header -->
         <div class="top-header col-12 d-flex flex-row justify-content-between ">
@@ -83,6 +102,8 @@
         <!--End Header-->
 
     </header>
+
+
 </div>
 
 
