Header Responsived Successfulty !
header 100% responsive !

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             </section>
             <!--End Nav Header-->
 
-            <div class="main-header col-12">
-
+            <div class="main-header col-md-12 offset-md-0 col-lg-10 offset-lg-1 ">
+                    <img src="css/img/web/header.jpg" class="img-fluid" alt="گلشن کویر یزد " />
             </div>
             <!--End Header-->
 
