Date-holder fixed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <header class="row header-container">
             <!--Start Top Header -->
             <div class="top-header col-12 d-flex flex-row justify-content-between ">
-                <div class="date-holder"><span>تاریخ :  دوشنبه 22 مرداد 98</span></div>
+                <div class="date-holder yekan">تاریخ :<span>  </span></div>
                 <div class="left-banner">
                     <ul class="d-flex list-unstyled p-1 m-1 ml-5">
                         <li class="p-1 pl-3 ml-2 "><a  class="yekan" href="#">برند های ثبت شده</a></li>
