some Elements Animated By Scroll
1- install aos plugin
2- amimated some element by scroll
:arrow_down:
http://michalsnik.github.io/aos/

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-rtl.css">
+    <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
     <title>گلشن کویر یزد </title>
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -23,8 +24,8 @@
 
                 <div class="col-5 offset-7 navbar-item-holder">
                     <ul class="d-flex list-unstyled">
-                        <li><a href="#">درباره ما</a>  <span class="text-white"> | </span></li>
-                        <li><a href="#">دسته بندی محصولات</a> <span class="text-white"> | </span></li>
+                        <li><a href="#"> صفحه اصلی </a>  <span class="text-white"> | </span></li>
+                        <li><a href="#"> درباره ما  </a> <span class="text-white"> | </span></li>
                         <li><a href="#">محصولات</a> <span class="text-white"> | </span></li>
                         <li><a href="#">تماس با ما</a> <span class="text-white"> | </span></li>
                     </ul>
@@ -87,17 +88,17 @@
 
                     <div class="col-8 navbar-item-holder">
                         <ul class="d-flex list-unstyled">
-                            <li><a href="#">درباره ما</a>  <span class="text-white"> | </span></li>
-                            <li><a href="#">دسته بندی محصولات</a> <span class="text-white"> | </span></li>
+                            <li><a href="#"> صفحه اصلی </a>  <span class="text-white"> | </span></li>
+                            <li><a href="#"> درباره ما  </a> <span class="text-white"> | </span></li>
                             <li><a href="#">محصولات</a> <span class="text-white"> | </span></li>
-                            <li><a href="#">تماس با ما</a> <span class="text-white"> | </span></li>
+                            <li><a href="#">تماس با ما</a> <span class="text-white">  </span></li>
                         </ul>
                     </div>
                 </div>
             </section>
             <!--End Nav Header-->
 
-            <div class="main-header col-md-12 offset-md-0 col-lg-10 offset-lg-1 ">
+            <div class="main-header col-md-12 offset-md-0 col-lg-10 offset-lg-1  col-xl-10 ">
                     <img src="css/img/web/header.jpg" class="img-fluid" alt="گلشن کویر یزد " />
             </div>
             <!--End Header-->
@@ -132,7 +133,8 @@
                     </p>
                 </article>
 
-                <div class="product-box-holder col-12 d-flex justify-content-between flex-row">
+                <div
+             class="product-box-holder col-12 d-flex justify-content-between flex-row">
                     <div class="box col-3">
                         <figure>
                             <img class="img-fluid" src="css/img/pistachio.jpg" alt="pistachio ">
@@ -249,7 +251,7 @@
 
         <!---------------------------------------Start  Product-Content-Box ---------------------------------------->
         <!--***************************************Start Product 1*********************************-->
-        <section class="row productContentBox ">
+        <section class="row productContentBox "  >
             <div class="product-box  ">
 
 
@@ -259,26 +261,29 @@
                     <div class="row row-product">
 
                         <div class="col-9 content-box d-flex flex-column justify-content-center product-info-holder mt-1">
-                            <div class="product-photo-holder col-12"> <div class="product-photo ">
+                            <div class="product-photo-holder col-12"> <div class="product-photo " data-aos="fade-down">
                                 <figure>
                                     <img  src="css/img/web/tokhme.png" alt="تخمه ی گلشن کویر">
                                 </figure>
                             </div></div></div>
-                        <div class="product-caption-holder col-12  ">
-                            <div class="product-caption ">
-                                <div class="caption text-justify p-4">
-                                    <div class="title d-flex flex-row justify-content-between flex-row-reverse">
-                                        <div class="icon"><i class="fas fa-share-alt"></i></div>
-                                        <h3 class="text-right yekan">تخمه</h3>
+                        <div >
+                            <div class="product-caption-holder col-12  " data-aos="fade-up" >
+                                <div class="product-caption " >
+                                    <div class="caption text-justify p-4">
+                                        <div class="title d-flex flex-row justify-content-between flex-row-reverse">
+                                            <div class="icon"><i class="fas fa-share-alt"></i></div>
+                                            <h3 class="text-right yekan">تخمه</h3>
+                                        </div>
+                                        <div class="content-text">
+                                            <p>مرغوب‌ترین برنج دنیا، برنج ایران است و بهترین نوع برنج ایرانی،‌ طارم و هاشمی. این برنج‌ها از بهترین شالیزارهای مازندران برداشت شده، پس از كنترل كیفیت در آزمایشگاه‌های تخصصی گلستان وارد چرخه بسته‌بندی و در وزن‌های مختلف به بازار عرضه می‌شوند. عطر و طعم بی‌نظیر برنج گلستان با هیچ برنج دیگری قابل مقایسه نیست. با گلستان،‌ كیفیت زندگی بالاتر از همیشه است. چرا كه مشتریان گلستان؛‌ لایق بهترین ها هستند.</p>
+                                        </div>
+                                        <div class="d-flex flex-row justify-content-end product-btn">
+                                            <button class="btn btn-outline-dark yekan  "> محصولات تخمه </button>
+                                        </div>
                                     </div>
-                                    <div class="content-text">
-                                        <p>مرغوب‌ترین برنج دنیا، برنج ایران است و بهترین نوع برنج ایرانی،‌ طارم و هاشمی. این برنج‌ها از بهترین شالیزارهای مازندران برداشت شده، پس از كنترل كیفیت در آزمایشگاه‌های تخصصی گلستان وارد چرخه بسته‌بندی و در وزن‌های مختلف به بازار عرضه می‌شوند. عطر و طعم بی‌نظیر برنج گلستان با هیچ برنج دیگری قابل مقایسه نیست. با گلستان،‌ كیفیت زندگی بالاتر از همیشه است. چرا كه مشتریان گلستان؛‌ لایق بهترین ها هستند.</p>
-                                    </div>
-                                    <div class="d-flex flex-row justify-content-end product-btn">
-                                        <button class="btn btn-outline-dark yekan  "> محصولات تخمه </button>
-                                    </div>
-                                </div>
-                            </div> </div>
+                                </div> </div>
+
+                        </div>
 
 
                     </div>
@@ -300,13 +305,13 @@
                     <div class="row row-product">
 
                         <div class="col-9  content-box d-flex flex-column justify-content-center product-info-holder mt-1">
-                            <div class="product-photo-holder col-12"> <div class="product-photo ">
+                            <div class="product-photo-holder col-12"> <div data-aos="fade-down" class="product-photo ">
                                 <figure>
                                     <img  src="css/img/web/badamHendi.png" alt="بادام هندی ی گلشن کویر">
                                 </figure>
                             </div></div></div>
                         <div class="product-caption-holder col-12  ">
-                            <div class="product-caption ">
+                            <div class="product-caption  " data-aos="fade-up">
                                 <div class="caption text-justify p-4">
                                     <div class="title d-flex flex-row justify-content-between flex-row-reverse">
                                         <div class="icon"><i class="fas fa-share-alt"></i></div>
@@ -341,13 +346,13 @@
                     <div class="row row-product">
 
                         <div class="col-9  content-box d-flex flex-column justify-content-center product-info-holder mt-1">
-                            <div class="product-photo-holder col-12"> <div class="product-photo ">
+                            <div class="product-photo-holder col-12"> <div data-aos="fade-down" data-aos-delay="40" class="product-photo ">
                                 <figure>
                                     <img  src="css/img/web/peste.png" alt="پسته ی گلشن کویر">
                                 </figure>
                             </div></div></div>
                         <div class="product-caption-holder col-12  ">
-                            <div class="product-caption ">
+                            <div class="product-caption " data-aos="fade-up">
                                 <div class="caption text-justify p-4">
                                     <div class="title d-flex flex-row justify-content-between flex-row-reverse">
                                         <div class="icon"><i class="fas fa-share-alt"></i></div>
@@ -383,13 +388,13 @@
                     <div class="row row-product">
 
                         <div class="col-9  content-box d-flex flex-column justify-content-center product-info-holder mt-1">
-                            <div class="product-photo-holder col-12"> <div class="product-photo ">
+                            <div class="product-photo-holder col-12"> <div data-aos="fade-down" class="product-photo ">
                                 <figure>
                                     <img  src="css/img/web/tokhme.png" alt="تخمه ی گلشن کویر">
                                 </figure>
                             </div></div></div>
                         <div class="product-caption-holder col-12  ">
-                            <div class="product-caption ">
+                            <div class="product-caption  " data-aos="fade-up">
                                 <div class="caption text-justify p-4">
                                     <div class="title d-flex flex-row justify-content-between flex-row-reverse">
                                         <div class="icon"><i class="fas fa-share-alt"></i></div>
@@ -472,6 +477,7 @@
 
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
+<script src="js/aos.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" integrity="sha384-b3ua1l97aVGAPEIe48b4TC60WUQbQaGi2jqAWM90y0OZXZeyaTCWtBTKtjW2GXG1" crossorigin="anonymous"></script>
 <script src="js/owl.carousel.min.js"></script>
