--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="row header-container">
             <!--Start Top Header -->
             <div class="top-header col-12 d-flex flex-row justify-content-between ">
-                <div class="date-holder yekan">تاریخ :<span>  </span></div>
+                <div class="date-holder yekan">واحد فروش : 01254545454 <span>  </span></div>
                 <div class="left-banner">
                     <ul class="d-flex list-unstyled p-1 m-1 ml-5">
                         <li class="p-1 pl-3 ml-2 "><a  class="yekan" href="#">برند های ثبت شده</a></li>
@@ -64,11 +64,8 @@
                     <div class="info d-flex flex-column justify-content-center">
                         <div class="socialNetworks d-flex flex-row justify-content-end">
                             <div class="socialIcons"><i class="fab fa-instagram"></i></div>
-                            <div class="socialIcons"><i class="fab fa-facebook"></i></div>
                             <div class="socialIcons"> <i class="fab fa-telegram-plane"></i></div>
                             <div class="socialIcons"><i class="fab fa-twitter"></i></div>
-                            <div class="socialIcons"><i class="fab fa-linkedin-in"></i></div>
-
                         </div>
                         <div class="contact-info text-left ">
                             <div class="span-holder">                      <span>شماره تماس : 09134576502 </span>
@@ -82,20 +79,32 @@
             </section>
             <!--End Over Head -->
             <!--Start Nav Header-->
-            <section class="nav-header col-12 ">
+            <section class="nav-header col-8 offset-2">
+                    <nav class="  navbar navbar-expand-lg navbar-dark bg-dark">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                        منو
+                    </button>
+                    <div class="collapse navbar-collapse " id="navbarNav">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item active pl-3">
+                                <a class="nav-link " href="#">صفحه اصلی      <span class="sr-only">(current)</span></a>
+                            </li>
 
-                <div class="navbar-fix col-8 ">
-
-                    <div class="col-8 navbar-item-holder">
-                        <ul class="d-flex list-unstyled">
-                            <li><a href="#"> صفحه اصلی </a>  <span class="text-white"> | </span></li>
-                            <li><a href="#"> درباره ما  </a> <span class="text-white"> | </span></li>
-                            <li><a href="#">محصولات</a> <span class="text-white"> | </span></li>
-                            <li><a href="#">تماس با ما</a> <span class="text-white">  </span></li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">درباره ما</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">محصولات</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">تماس با ما</a>
+                            </li>
                         </ul>
                     </div>
-                </div>
+                </nav>
             </section>
+
             <!--End Nav Header-->
 
             <div class="main-header col-md-12 offset-md-0 col-lg-10 offset-lg-1  col-xl-10 ">
