--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     <link rel="stylesheet" href="css/style.css">
     <title>گلشن کویر یزد </title>
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
 </head>
 <body>
@@ -143,7 +160,7 @@
                 </article>
 
                 <div
-             class="product-box-holder col-12 d-flex justify-content-between flex-row">
+             class="product-box-holder col-12 d-flex justify-content-between flex-row ">
                     <div class="box col-3">
                         <figure>
                             <img class="img-fluid" src="css/img/pistachio.jpg" alt="pistachio ">
@@ -173,7 +190,7 @@
             <!---------------------------------------End Special Product Box---------------------------------------->
 
             <!---------------------------------------Start  Product Slider ---------------------------------------->
-            <section class="product-slider  row   ">
+            <section class="product-slider  row     d-sm-none">
                 <div class="product-slider-container col-10 p-3 mt-5 mx-auto d-flex  ">
                     <div class="controller" id="next"> <i class="fas fa-chevron-right"></i></div>
                     <div class=" col-12 slider-holder d-flex flex-nowrap flex-row justify-content-between">
