add slider header
1- remove header photo and replace with slider

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="logo-holder sticky-logo position-absolute">
                 <figure>
-                    <img src="css/img/logo.png" alt="logo" >
+                    <img src="css/img/logo.gif" alt="logo" >
                 </figure>
             </div>
         </section>
@@ -73,7 +73,7 @@
                 <div class="logo-holder col-6">
                     <div class="logo">
                         <figure>
-                            <img src="css/img/logo.png" alt="لوگوی گلشن کویر"/>
+                            <img src="css/img/logo.gif" alt="لوگوی گلشن کویر"/>
                         </figure>
                     </div>
                 </div>
@@ -124,8 +124,18 @@
 
             <!--End Nav Header-->
 
-            <div class="main-header col-md-12 offset-md-0 col-lg-10 offset-lg-1  col-xl-10 ">
-                    <img src="css/img/web/header.jpg" class="img-fluid" alt="گلشن کویر یزد " />
+            <div class="main-header col-md-12 offset-md-0 col-lg-10 offset-lg-1  col-xl-10" >
+                <div id="slideshow" >
+                    <div>
+                        <img src="css/img/web/header.jpg" alt="گلشن کویر" class="img-fluid">
+                    </div>
+                    <div>
+                        <img src="css/img/web/header.jpg" alt="گلشن کویر" class="img-fluid">
+                    </div>
+                    <div>
+                        <img src="css/img/web/header.jpg" alt="گلشن کویر" class="img-fluid">
+                    </div>
+                </div>
             </div>
             <!--End Header-->
 
