change intrudoction text

--- a/index.html
+++ b/index.html
@@ -157,16 +157,15 @@
             <section class="SpcProductBox row pb-3 pt-4 mt-5">
                 <article class="col-8 p-4 text-justify offset-2 ">
                     <h4>معرفی  گلشن کویر یزد</h4>
-                    <p>
+                    <p class="text-justify">
+                        مجموعه کارخانه جات گلشن کویر در سال 1398 با استناد بر سخن رهبری  و شعار سال "رونق تولید " و با استعانت از رزاق یکتا و با تاکید بر توان داخلی و پشتکار جوانان ایرانی در حوزه تولید ، فرآوری و بسته بندی انواع خشکبار نظیر پسته بوداده ، بادام زمینی و انواع تخمه با طعم های مختلف و سایر محصولات تاسیس شد .
 
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                        گلشن کویر مفـتخر است اعلام کند که در  مجـموعه کارخـانه جات با اشتغـالزایی مستـقیم برای بیش از 150 نفـر و به صـورت غیر مسـتقیم برای بیش از 100 نفـر شعـار  <span class="text-danger">  "  کیفـیت را فدای قیـمت نمـیکنیم  "</span>  را در بین تولید کنندگان مطرح کشور و خاورمیانه تثبیت کند
 
                     </p>
-
                     <br>
-                    <p>
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
-                    </p>
+                    <br>
+
                 </article>
 
                 <div
@@ -174,24 +173,20 @@
                     <div class="box col-3">
                         <figure>
                             <img class="img-fluid" src="css/img/pistachio.jpg" alt="pistachio ">
-                            <figcaption class="p-4">محصول شماره 1</figcaption>
                         </figure>
                     </div>
                     <div class="box col-3 ">
                         <figure>
                             <img class="img-fluid" src="css/img/pistachio.jpg" alt="pistachio ">
-                            <figcaption class="p-4" >محصول شماره 2</figcaption>
                         </figure>
                     </div>
                     <div class="box col-3">
                         <figure><img class="img-fluid" src="css/img/pistachio.jpg" alt="pistachio ">
-                            <figcaption class="p-4">محصول شماره 3</figcaption>
                         </figure>
                     </div>
                     <div class="box col-3">
                         <figure>
                             <img class="img-fluid" src="css/img/pistachio.jpg" alt="pistachio ">
-                            <figcaption class="p-4">محصول شماره 4</figcaption>
                         </figure>
                     </div>
 
